Set up profile page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav>
+        <a href="profile.html">Go to Profile Page</a>
+    </nav>
 </body>
 </html>
