Add CAMT Information page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-        <a href="profile.html">Go to Profile Page</a>
+        <a href="profile.html">Move to Profile Page</a>
     </nav>
 </body>
 </html>
