Add CAMT Information page

--- a/profile.html
+++ b/profile.html
@@ -9,6 +9,7 @@
     <h1>Watcharapong Wanna 662115047</h1>
     <nav>
         <a href="index.html">Move to index.html</a>
+        <a href="https://camt.cmu.ac.th/index.php/th/">Go to CAMT Page</a>
     </nav>
 </body>
 </html>
