add friend profile and image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <nav>
         <a href="profile.html">Move to Profile Page</a>
+        <a href="friendprofile.html">Link to friend profile</a>
     </nav>
+    <a href=" "></a>
 </body>
 </html>
